Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124111

Fix QNetworkReply on WASM

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.8.0 FF
    • 6.5, 6.6, 6.7
    • Network
    • None
    • WebAssembly
    • 655b98482 (dev), d40f29353 (6.7), 9907ef0d6 (dev)

    Description

      There are multiple problems with sending request and QNetworkReply on WebAssembly platform:

      1. The request can only be send from main thread. There was a fix which proxied request to main thread but it was reverted as it introduced another problems.
      2. Cancelling the request is done by setting m_fetch->userData to nullptr. This can be done better by calling emscripten_fetch_close().
      3. Request is not cancel when QNetworkReply is deleted. This can lead to use-after-free by emscripten fetch. Doublecheck the lifetimes of objects passed to emscripten_fetch().

      Related: QTBUG-122893

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            piwierci Piotr Wierciński
            piwierci Piotr Wierciński
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes