tests/auto/wasm/fetchapi/tst_fetchapi.cpp
@@ -69,11 +69,9 @@ void tst_FetchApi::sendRequestOnMainThread()
 
 void tst_FetchApi::sendRequestOnBackgroundThread()
 {
-    QSKIP("Skip this test until we fix fetching from background threads.");
     QEventLoop mainEventLoop;
     BackgroundThread *backgroundThread = new BackgroundThread();
     connect(backgroundThread, &BackgroundThread::finished, &mainEventLoop, &QEventLoop::quit);
-    connect(backgroundThread, &BackgroundThread::finished, backgroundThread, &QObject::deleteLater);
     backgroundThread->start();
     mainEventLoop.exec();
 
